--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .App-logo {
@@ -40,13 +43,91 @@
 .portfolio{
   width: 80%;
   display: grid;
-  gap: 0.25rem;
-  grid-auto-columns: 1fr 1fr 1fr;
-  border: 1px solid red;
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: rgba(113, 123, 126, 0.108);
 }
 .onePicture{
   width: 15rem;
   padding: 1rem;
-  border: 1px solid green;
+  
 }
 
+nav, footer{
+  padding: 1rem;
+  background-color: rgba(113, 123, 126, 0.308);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%
+}
+
+.left-margin1{
+  margin-left: 1rem;
+}
+
+.top-margin2{
+  margin-top: 2rem;
+}
+
+.top-margin1{
+  margin-top: 1rem;
+}
+
+.bottom-margin2{
+  margin-bottom: 2rem;
+}
+
+.margin-center{
+  margin-left: auto;
+  margin-right: auto;
+}
+/* .link{
+  color: white;
+  text-decoration: none;
+} */
+
+.link>.btn:hover{
+  color: white;
+  font-weight: bold;
+}
+
+.box{
+  width: 60%;
+  margin: 1rem auto;
+}
+
+.box-main{
+  width: 60%;
+  margin: 1rem auto;
+  text-align: justify;
+}
+
+.btn-xlg{
+  width: 100%;
+  line-height: 500%;
+}
+
+.flex{
+  display: flex;
+  width: 100%;
+}
+
+.flex-row{
+  flex-direction: row;
+}
+
+.flex-stretch{
+  justify-content: space-around;
+}
+
+.googleMap{
+  
+}
